k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ready-for-production
  namespace: messages
spec:
  selector:
    app: ready-for-production
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
