k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ready-for-production
  namespace: messages
  labels:
    name: ready-for-production
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      location ~* "(\'|\")(.*)(drop|insert|md5|select|union|metrics)" { 
          deny all; 
      }
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - <Host>
  rules:
    - host: <Host>
      http:
        paths:
        - pathType: Prefix
          path: "/production/api/(.+)"
          backend:
            service:
              name: ready-for-production
              port: 
                name: http
